@@ -52,7 +52,7 @@ pointless warnings and a whole lot of nothing INSERTed.
 
 .SH SEE ALSO
 .IX Header "SEE ALSO"
-.BR "obd2kml(1), obd2csv(1)"
+.BR "obd2kml(1), obd2csv(1), obdgui(1)"
 
 .SH AUTHORS
 Gary "Chunky Ks" Briggs <chunky@icculus.org>
